--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "sass": "^1.49.9",
+    "stripe": "^9.5.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
