--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.0",
+    "@types/node": "^17.0.38",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "dotenv": "^16.0.1",
     "firebase": "^9.6.10",
     "react": "^17.0.2",
@@ -25,6 +29,7 @@
     "sass": "^1.49.9",
     "stripe": "^9.5.0",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
