--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@sentry/react": "^7.9.0",
+    "@sentry/tracing": "^7.9.0",
     "@stripe/react-stripe-js": "^1.8.1",
     "@stripe/stripe-js": "^1.30.0",
     "@testing-library/jest-dom": "^5.16.2",
